--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>Ring Buffer Visualization</h1>
-    
+    <h2>I have implemented these datastructures such that multiple threads can Read/Write without locks!</h2> 
     <canvas id="traffic-circle" width="800" height="600"></canvas>
     
     <div class="controls">
