Update demo site

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1>Ring Buffer Visualization</h1>
+    <h2><a href="https://crates.io/crates/lockless-datastructures">This the link to the crate </a> </h2> 
     <h2>I have implemented these datastructures such that multiple threads can Read/Write without locks!</h2> 
     <canvas id="traffic-circle" width="800" height="600"></canvas>
     
