--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </head>
   <body>
     <h1>Ring Buffer Visualization</h1>
-    <h2><a href="https://crates.io/crates/lockless-datastructures">This the link to the crate </a> </h2> 
+    <h2><a href="https://crates.io/crates/lockless-datastructures">This the link to the crate </a> </h2>
+    <h2><a href="benchmarks.html">Benchmarks</a></h2> 
     <h2>I have implemented these datastructures such that multiple threads can Read/Write without locks!</h2> 
+    <h3>I have instructions in the README on how to run a test application using my library</h3>
     <canvas id="traffic-circle" width="800" height="600"></canvas>
     
     <div class="controls">
