deploy: e252a070f011c8542ce921f0fa4069736f068a81

--- a/criterion/SPSC/MutexRingBufferSpsc/report/index.html
+++ b/criterion/SPSC/MutexRingBufferSpsc/report/index.html
@@ -118,39 +118,39 @@
                         <tbody>
                             <tr>
                                 <td>Slope</td>
-                                <td class="ci-bound">93.681 µs</td>
-                                <td>93.966 µs</td>
-                                <td class="ci-bound">94.267 µs</td>
+                                <td class="ci-bound">87.320 µs</td>
+                                <td>87.541 µs</td>
+                                <td class="ci-bound">87.779 µs</td>
                             </tr>
                             <tr>
                                 <td>R&#xb2;</td>
-                                <td class="ci-bound">0.9771192</td>
-                                <td>0.9783573</td>
-                                <td class="ci-bound">0.9769729</td>
+                                <td class="ci-bound">0.9850242</td>
+                                <td>0.9858927</td>
+                                <td class="ci-bound">0.9848770</td>
                             </tr>
                             <tr>
                                 <td>Mean</td>
-                                <td class="ci-bound">93.629 µs</td>
-                                <td>93.931 µs</td>
-                                <td class="ci-bound">94.239 µs</td>
+                                <td class="ci-bound">87.158 µs</td>
+                                <td>87.364 µs</td>
+                                <td class="ci-bound">87.574 µs</td>
                             </tr>
                             <tr>
                                 <td title="Standard Deviation">Std. Dev.</td>
-                                <td class="ci-bound">1.3282 µs</td>
-                                <td>1.5567 µs</td>
-                                <td class="ci-bound">1.7586 µs</td>
+                                <td class="ci-bound">832.97 ns</td>
+                                <td>1.0630 µs</td>
+                                <td class="ci-bound">1.2816 µs</td>
                             </tr>
                             <tr>
                                 <td>Median</td>
-                                <td class="ci-bound">93.422 µs</td>
-                                <td>93.715 µs</td>
-                                <td class="ci-bound">94.125 µs</td>
+                                <td class="ci-bound">87.056 µs</td>
+                                <td>87.196 µs</td>
+                                <td class="ci-bound">87.452 µs</td>
                             </tr>
                             <tr>
                                 <td title="Median Absolute Deviation">MAD</td>
-                                <td class="ci-bound">1.0931 µs</td>
-                                <td>1.4270 µs</td>
-                                <td class="ci-bound">1.9256 µs</td>
+                                <td class="ci-bound">615.24 ns</td>
+                                <td>798.99 ns</td>
+                                <td class="ci-bound">1.0407 µs</td>
                             </tr>
                         </tbody>
                     </table>
